FIX: Remove horizontal scroll

--- a/assets/styles/global/base.scss
+++ b/assets/styles/global/base.scss
@@ -14,7 +14,6 @@ html {
 }
 
 body {
-  width: 100vw; 
   min-height: 100vh;
   display: flex; 
   justify-content: center; 
